<resources>
    <string name="app_name">Diva wear</string>
    <string name="title_cart">السلة</string>
    <string name="title_orders">الطلبات</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_favourite">المفضلة</string>
    <string name="title_settings">الإعدادات</string>
    <string name="loading">تحميل</string>
    <string name="search">ابحث عما تريد</string>
    <string name="title_categories">"الاقسام "</string>

    <string name="highPrice">الاعلى سعرا</string>
    <string name="lowPrice">الأقل سعرا</string>
    <string name="productDetails">تفاصيل المنتج</string>
    <string name="title_description">وصف المنتج</string>
    <string name="title_quentity">الكميه المطلوبة</string>
    <string name="add_cart">اضف إلى السلة</string>
    <string name="similarProduct">"منتجات مشابهة "</string>
    <string name="title_add_success">تم إضافة المنتج فى السلة بنجاح</string>
    <string name="title_doneBuy">إتمام عمملية الشراء</string>
    <string name="title_anotherProduct">منتجات اخرى</string>
    <string name="title_welcome">"مرحبا بكم "</string>
    <string name="title_please">من فضلك سجل دخولك</string>
    <string name="title_phone">"رقم الجوال "</string>
    <string name="title_enter_phone">الرجاء ادخال رقم الجوال</string>
    <string name="title_passowrd">كلمة المرور</string>
    <string name="title_enter_password">الرجاء إدخال كلمة المرور</string>
    <string name="title_login">تسجيل دخول</string>
    <string name="title_visitor">تصفح كزائر</string>
    <string name="title_forget_passowrd">هل نسيت كلمة المرور</string>
    <string name="title_no_have_account">ليس لديك حساب</string>
    <string name="title_press">إضغط هنا</string>
    <string name="title_done">موافقه</string>
    <string name="title_user_name">اسم المستخدم</string>
    <string name="title_enteer_user_name">"الرجاء إدخال اسم المستخدم "</string>
    <string name="title_create_account">إنشاء حساب</string>
    <string name="title_city">المدينة</string>
    <string name="title_have_account">لديك حساب بالفعل</string>
    <string name="title_enter_city">برجاء اختار المدينه</string>
    <string name="field_required">هذا الحقل مطلوب</string>
    <string name="title_enter_return_password">إستعادة كلمة المرور</string>
    <string name="tittle_confirm">تأكيد</string>
    <string name="title_order_prview">ملخص الطلب</string>
    <string name="title_total">الاجمالى</string>
    <string name="doneAddCart">"تم اضافى الى السلة بنجاح "</string>
    <string name="isAlerdyExsist">"المنتج موجود بالفعل "</string>
    <string name="map_key">AIzaSyCE29pCYj3ntftgARbTP0FA8xZyLBCF7f8</string>
    <string name="title_total_amount">المبلغ الإجمالى</string>
    <string name="tittle_location_delivery">"موقع التسليم "</string>
    <string name="title_location">مكان الشحن</string>
    <string name="tittle_method_payment">طريقة الدفع</string>
    <string name="title_delivery_paid">الدفع عند الاستلام</string>
    <string name="tittle_select_location">اختار موقعك</string>
    <string name="title_detail_delivery">تفاصيل التسليم </string>
    <string name="reviewOrder">مراجعة الطلب</string>
    <string name="delivery">الشحن</string>
    <string name="allPrice">السعر الكلى</string>
    <string name="tittle_quantity">الكمية :</string>
    <string name="mustDelviry">"لابد من اختيار مكان الشحن "</string>
    <string name="mustSelectCity">Must select city</string>
    <string name="tittle_done_send">تم إرسال طلبك بنجاح</string>
    <string name="tittle_go_to_home">"الرجوع الى الرئيسية "</string>
    <string name="tittle_order_num">رقم الطلب</string>
    <string name="tittle_more">عرض المزيد</string>
    <string name="numberOfProduct">عدد المنتجات : </string>
    <string name="thereIsNoProduct">لا يوجد منتجات فى السله ليتم عمليية الشراء</string>
    <string name="title_follow_order">تتبع الطلب</string>
    <string name="orderDetail">"تفاصيل الطلب "</string>
    <string name="orderDate">تاريخ الطلب</string>
    <string name="tittle_line">فى الطريق</string>
    <string name="tittleSend">تم الإرسال</string>
    <string name="tittle_road">فى الطريق</string>
    <string name="tittle_done_delivery">تم التسليم</string>
    <string name="notification">الإشعارات</string>
    <string name="title_profile">حسابى</string>
    <string name="title_contactUs">اتصل بنا</string>
    <string name="title_logout">تسجيل خروج</string>
    <string name="title_name">الإسم</string>
    <string name="tittle_save_change">حفظ التعديلات</string>
    <string name="title_message">الرسالة</string>
    <string name="title_enter_message">الرجاء كتابة رسالتك</string>
    <string name="send">"إرسال "</string>
    <string name="tittleSotial">أو عبر التواصل الجتماعى</string>
    <string name="yourRequest">تم ارسال طلبك بنجاح</string>
    <string name="currency">ج.م</string>
    <string name="title_specific_size">إختر المقاس </string>
    <string name="title_specific_color">"إختر اللون "</string>
    <string name="title_enter_size">الرجاء اختيار المقاس المناسب</string>
    <string name="title_enter_color">برجاء اختيار اللون المناسب</string>
    <string name="mustSelectSize">لابد من إختيار حجم مناسب ليك</string>
    <string name="mustSelectColor">لابد من إختيار لون مناسب</string>
    <string name="default_notification_channel_id">channel</string>
    <string name="title_enter_vervication">تفعيل الحساب</string>
    <string name="phone_verify">كود التفعيل</string>
    <string name="enter_valid_phone">برجاء ادخال رقم التليفون صحيح ويبدا ب   0</string>
    <array name="tittles_requests">
        <item>الطلبات الحالية</item>
        <item>الطلبات السابقة</item>
    </array>
</resources>