<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.smartzone.diva_wear.ui.main.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.smartzone.diva_wear.ui.main.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smartzone.diva_wear.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.smartzone.diva_wear.ui.main.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/favourite_fragment" />

    <action android:id="@+id/home"
        app:destination="@id/navigation_home"
        app:popUpToInclusive="true"
        app:popUpTo="@id/navigation_home"
        />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.smartzone.diva_wear.ui.main.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>