<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.smartzone.diva_wear.ui.forget_password.ForgetPassordViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".ui.forget_password.ForgetPasswordActivity">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/arrowright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/title_enter_return_password"
            android:textSize="@dimen/txt16"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/logo"
            android:textSize="@dimen/txt18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/tittle_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/title_phone"
            android:textSize="@dimen/txt18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/back_login_et"
            android:fontFamily="@font/neo_sans_medium"
            android:hint="@string/title_enter_phone"
            android:inputType="phone"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:textSize="@dimen/txt14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tittle_phone"
            tools:ignore="TextFields" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/back_color_primary_et"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_12sdp"
            android:text="@string/tittle_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/txt14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>